--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,10 +1,13 @@
 <resources>
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
-    </style>
 
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">@color/Principal</item>
+        <item name="colorPrimaryDark">@color/Secundária</item>
+        <item name="colorAccent">@color/Destaque</item>
+    </style>
+    <style name="SemBarra" parent="Theme.AppCompat.NoActionBar">
+
+    </style>
 </resources>
